# ops-platform

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ai-code-review.yml  self-test.yml
configs/: defaults.yml  rdc.yml
review/prompts/: code-quality.md  dependencies.md  security.md
review/scripts/: post-review-comment.sh  run-review-pass.sh
scripts/: setup-project.sh
triage-engine/: pyproject.toml
triage-engine/src/triage_engine/: config.py
triage-engine/tests/: test_config.py
